- Fixed the support of Internet Explorer (tested on IE7 and IE8) - Cleanup of the generated HTML to have page that are XHTML compliant (not yet complete)
SVN:trunk[198]

--- a/css/jqModal.css
+++ b/css/jqModal.css
@@ -2,32 +2,30 @@
 	Brice Burgess <bhb@iceburg.net> */
 
 /* The Window's CSS z-index value is respected (takes priority). If none is supplied,
-	the Window's z-index value will be set to 3000 by default (in jqModal.js). You
-	can change this value by either;
-	  a) supplying one via CSS
-	  b) passing the "zIndex" parameter. E.g.  (window).jqm({zIndex: 500}); */
+	the Window's z-index value will be set to 3000 by default (via jqModal.js). */
 	
 .jqmWindow {
     display: none;
     
     position: fixed;
-    top: 25px;
-    left: 25px;
+    no.top: 17%;
+    no.left: 50%;
     
-    nomargin-left: 25px;
-    nomargin-right: 25px;
-    nowidth: 800px;
+    no.margin-left: -300px;
+    no.width: 700px;
     
-    background-color: #FFF;
+    background-color: #EEE;
     color: #333;
     border: 1px solid black;
     padding: 12px;
+    
+    z-index:9999; 
 }
 
-.jqmOverlay { background-color: #333; }
+.jqmOverlay { background-color: #000; }
 
 /* Background iframe styling for IE6. Prevents ActiveX bleed-through (<select> form elements, etc.) */
-* removed.iframe.jqm {position:absolute;top:0;left:0;z-index:-1;
+* iframe.jqm {position:absolute;top:0;left:0;z-index:-1;
 	width: expression(this.parentNode.offsetWidth+'px');
 	height: expression(this.parentNode.offsetHeight+'px');
 }
@@ -35,7 +33,7 @@
 /* Fixed posistioning emulation for IE6
      Star selector used to hide definition from browsers other than IE6
      For valid CSS, use a conditional include instead */
-* removed.html .jqmWindow {
+* html .jqmWindow {
      position: absolute;
      top: expression((document.documentElement.scrollTop || document.body.scrollTop) + Math.round(17 * (document.documentElement.offsetHeight || document.body.clientHeight) / 100) + 'px');
 }
